@startuml btc

package "View Layer" #LightBlue {
    class MainApp {
        +main(int argc, char** argv) : int
    }
}

package "Business Logic Layer" #LightGreen {
    class BitcoinExchange {
        +BitcoinExchange(const IRateAPI &rate_api)
        -_rate_api : const IRateAPI&
        +evaluateBTCTimeSeries(const std::string &filename) : void
    }

    interface IRateAPI {
        +getRateAt(Date &date) : double
    }

    class HistoricalRate {
        -_ratemap : std::map<std::string, double>
        +HistoricalRate()
        +swap(std::map<std::string, double> &ratemap) : void
        +getRateAt(Date &date) : double
    }

    class Date {
        -_date_str : std::string
        -_year : unsigned int
        -_month : unsigned int
        -_day : unsigned int
        +Date()
        +Date(const std::string &date_str)
        +getDateStr() const : const std::string&
        +getYear() const : unsigned int
        +getMonth() const : unsigned int
        +getDay() const : unsigned int
        +isCalendarDateValid() : bool
        +isLeapYear(int year) : bool
    }
}

package "Infrastructure Layer" #LightYellow {
    abstract class BaseDataFile {
        +{static} IsNotSpace(char const& c) : bool
        +{static} validate_date(std::string const& s) : bool
        +{static} trim(std::string const& s) : std::string
        #{abstract} parseFile(const std::string& filename) : void
    }

    class HistoricalDataFileCSV {
        -_header_format : std::string
        +HistoricalDataFileCSV(const std::string &header_format)
        +parseFile(const std::string& filename, HistoricalRate &historicalRate) : void
    }

    class InputDataFilePip {
        -_header_format : std::string
        -_ifs : std::ifstream
        -_ready : bool
        +InputDataFilePip()
        +InputDataFilePip(const std::string &header_format)
        +parseFile(const std::string& filename) : void
        +readNextDateAmount(Date &date, double &amount) : bool
    }

    class DateFormatChecker {
        -_format : std::string
        +checkFormat(std::string const& date) : bool
        +parseDate(std::string const& date_str, Date& date) : bool
    }

    class DateOfStartChecker {
        -_start_year : unsigned int
        -_start_month : unsigned int
        -_start_day : unsigned int
        +checkDateBegin(Date const& date) : bool
    }
}

package "Utility" #White {
    class FileUtils {
        +{static} IsNotSpace(char const& c) : bool
        +{static} trim(std::string const& s) : std::string
        +{static} validateDate(std::string const& s) : bool
    }
}

BaseDataFile <|-- HistoricalDataFileCSV
BaseDataFile <|-- InputDataFilePip
IRateAPI <|.. HistoricalRate

BitcoinExchange ..> IRateAPI
BitcoinExchange ..> InputDataFilePip
HistoricalDataFileCSV ..> HistoricalRate

FileUtils ..> DateFormatChecker
FileUtils ..> DateOfStartChecker
FileUtils ..> Date

DateFormatChecker ..> Date
DateOfStartChecker ..> Date

MainApp --> BitcoinExchange

@enduml
